--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Adrian R. Warman, B.Sc., PhD.</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">"That's interesting..."</h2>
     </section>
 
     <section class="main-content">
