--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-      <p>I'm a Manager and Information Development / Content Strategy Lead for IBM Application Platform Services.</p>
+      <p>I'm an Information Development / Content Strategy Lead for IBM Application Platform Services.</p>
 
       <footer class="site-footer">
 
