Simple text change.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Adrian Warman
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Adrian Warman</h1>
+	<h1>Hello, I'm Adrian Warman</h1>
 	<p>I'm an Information Development / Content Strategy Lead for IBM Application Platform Services.
     <a href="http://blog.awarman.org">Read more of my work...</a></p>
 </div><!-- /.blurb -->
